=== 0.4 (ongoing) ===

=== 0.3  ===

* Fixed MANIFEST.in - now static files are included

=== 0.2 ===

* Bugfixes

=== 0.1 ===

Initial commit